--- a/css/seller.css
+++ b/css/seller.css
@@ -8,15 +8,22 @@
 body,html
 {
     height: 100%;
+    width: 100%;
 }
+
 a
 {
     text-decoration: none;
 }
+
+::-webkit-scrollbar {
+    display: none;
+	
+}
 /*NAVBAR */
 .nav a
 {
-    height: 50px;
+    height: 6vh;
 	border-right: 2px solid #00FF41;
 	background-color: #00938A;
 	display: flex;
@@ -82,3 +89,10 @@ a
 }
 
 /* END OF NAV BAR */
+
+.main-container
+{
+    background: #4A6A71;
+    width: 100%;
+    height: calc(100% - 6vh);
+}
