--- a/css/seller.css
+++ b/css/seller.css
@@ -14,7 +14,7 @@ img
 {
 	height: 100%;
 	width: 100%;
-	object-fit: cover;
+	object-fit: contain;
 	overflow: hidden;
 	border-radius: 100px;
 }
@@ -30,10 +30,24 @@ a
       opacity:1;
     }
   }
+
+@keyframes fadeIn2{
+    0% {
+      opacity:0;
+      height: 83%;
+    }
+    100% {
+      opacity:1;
+    }
+  }
+  
 ::-webkit-scrollbar {
     display: none;
 	
 }
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
 /*NAVBAR */
 .nav
 {
@@ -135,16 +149,16 @@ a
     color: #386C5F;
     transition: opacity .5s ease-in-out;
     vertical-align: center;
-    font-size: 3vw;
+    font-size: 2.5vw;
 }
 .Choice-containter
 {
     height: 92%;
     width: 100%;
-    display: none;
+    display: flex;
     justify-content: center;
     align-items: center;
-    animation: fadeIn 0.5s ease-in;
+    animation: fadeIn 1s ease-in;
 }
 
 
@@ -192,42 +206,169 @@ a
 
 .Fruit-container
 {
-    height: 92%;
+    height: calc(92% - 10px);
     width: 100%;
-    display: flex;
-    animation: fadeIn 0.5s ease-in;
+    margin-top: 10px;
+    display: none;
+    flex-direction: column;
+    flex-wrap: wrap;
+    animation: fadeIn 1s ease-in;
 }
 .Veg-container
 {
-    height: 92%;
+    height: calc(92% - 10px);
     width: 100%;
+    margin-top: 10px;
     display: none;
+    flex-direction: column;
+    flex-wrap: wrap;
     animation: fadeIn 0.5s ease-in;
 }
 .back-btn
 {
     display: flex;
-    margin-left: calc(100% - 115px);
+    margin-left: calc(100% - 215px);
+    margin-bottom:50px;
     justify-content: center;
     align-items: center;
-    height: 50px;
-    width: 100px;
-    /* animation: fadeIn 0.5s ease-in; */
+    height: 80px;
+    width: 80px;
+    animation: fadeIn 0.5s ease-in;
     font-family: 'Arvo', serif;
     font-size: 2vh;
     color: #386C5F;
     cursor: pointer;
     z-index: 3;
     border: 2px solid #00FF41;
-    border-radius: 5px;
+    border-radius: 80px;
 }
 
 .back-btn:hover
 {
-	background-color: #00938A;
+    background: #00938A;
+    height: 82px;
+    width: 82px;
+    transition: all 0.2s ease-in;
 
 }
 
+.items
+{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+}
+
+.item
+{
+    display: flex;
+    height: 20px;
+    margin: 10px;
+    flex-grow: 1;
+    width: 100%;
+    justify-content: center;
+}
+
+.item-pic
+{
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    cursor: pointer;
+    border-radius: 100px;
+    background: #00938A;
+    transition: all 0.5s;
+
+}
+.item-pic:hover
+{
+    width: 120px;
+    height: 120px;
+    transition: all 0.5s;
+}
+
+
+.item-desc
+{
+    display: flex;
+    width: 500px;
+    height: 100px;
+    margin: 10px;
+    justify-content: center;
+    font-family: 'Arvo', serif;
+    align-items: center;
+    font-size: 2vw;
+    color: #386C5F;
+
+}
+
+.itemprice-container
+{
+    height: calc(92% - 10px);
+    width: 100%;
+    margin-top: 10px;
+    display: none;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn2 1s ease-in;
+}
+
+#form_id
+{
+	width: 30%;
+	height: 50%;
+    display: flex;
+    background: #3A4B40;
+	flex-direction: column;
+	margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    color: #00FF26;
+    font-family: 'Arvo', serif;
+    animation: fadeIn 1s ease-in-out;
+    
+}
+::placeholder
+{
+    color: rgb(78, 105, 82);
+    font-family: 'Arvo', serif;
+
+}
+
+.reg-field
+{
+	padding: 10px;
+	width: 80%;
+    background-color:#00938A;
+    color: #00FF26;
+	font-family: 'Arvo', serif;
+	margin: 10px;
+    border: none;
+    
+}
+#REG_button
+{
+	padding: 10px;
+	border: none;
+	background-color: #00938A;
+	font-family: 'Arvo', serif;
+    color: #00FF26;	
+	cursor: pointer;
+	margin-top: 20px;
+	transition: 0.2s ease-in;
+
+}
+#REG_button:hover
+{
+	transition: 0.2s ease-in;
+	padding: 15px;
+	margin-top: 20px;
+}
 @media only screen and (max-width: 1028px){
 
     .dropdown-1 li>a
