--- a/css/myitems.css
+++ b/css/myitems.css
@@ -326,3 +326,55 @@ p
     vertical-align: center;
     font-size: 1vw;
 }
+
+.withdraw-wrapper
+{
+	display: flex;
+	background: #2F4858;
+	height: 500px;
+	width: 500px;
+}
+.main-wrapper
+{
+	min-height: calc(100% - 3vw);
+    width: 100%;
+    background: #9CB0A4;
+	overflow-y: hidden;
+    font-family: 'Arvo', serif;
+    font-size: 2vh;
+    color: #00FF26;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.form-container
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	flex-wrap: wrap;
+	width: 100%;
+	height: 100%;
+}
+
+.withdraw-btn
+{
+	height: 50px;
+	width: 100px;
+	text-align: center;
+	margin-top: 100px; 
+    color: #5EC58A;
+    cursor: pointer;
+    background: #1E6072;
+    border: teal solid 2px;
+    transition: background 0.2s ease-in;   
+}
+
+.withdraw-btn:hover
+{
+	background: #00FF26;
+	color: 	#1E6072;
+}
