--- a/css/main.css
+++ b/css/main.css
@@ -219,11 +219,14 @@ img
 #select_user_div
 {
 	display: flex;
-	background: #9CB0A4;
+	/* background: #9CB0A4; */
+	/* background: red; */
+	background: linear-gradient(rgba(190, 245, 182, 0.7),rgba(77, 175, 62, 0.7)) ,url('../img/bg.jpg');
 	flex-direction: row;
 	flex-wrap: wrap;
 	width: 100%;
 	height: 75%;
+	color:rgb(37, 63, 32);
 }
 #welcome_message
 {
@@ -235,7 +238,8 @@ img
 	justify-content: center;
 	font-family: 'Arvo', serif;
 	font-size: 3vw;
-	color: #386C5F;
+	/* color: #386C5F; */
+	
 	
 }
 
@@ -301,7 +305,7 @@ img
 	justify-content: center;
 	font-family: 'Arvo', serif;
 	font-size: 3vw;
-	color:#386C5F;
+	/* color:#386C5F; */
 	
 }
 
